correct origin favicon alignment

--- a/src/scss/product-info.scss
+++ b/src/scss/product-info.scss
@@ -3,3 +3,8 @@
     width: 75%;
   }
 }
+
+.product-name {
+  line-height: 32px;
+  margin-left: 8px;
+}
